styles.css
html{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 25px;
    font-family: Arial, Helvetica, sans-serif;
}
.main-header{
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
  
    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
    url('./img/group.webp') center/cover no-repeat;

}
.logo, .logo-main{
width:100px;
height:70px;
    
    
}
.menu-icon{
  display: none;
}
nav{
    display: flex;
    justify-content: space-between;
}
nav ul{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    
}
a{
    text-decoration: none;
}
li{
  color: #2a7c6f;
  list-style-type: none;
  padding:10px;
}
li:hover{
  
    background-color: rgba(42, 124, 111,0.1);
}
.header{
    margin:  auto;
}
.header h1{
    text-transform: uppercase;
    font-size: 3.5rem;
    font-weight: bolder;
    color:#2a7c6f;
}
.submit, .btn, button{
    padding: 10px;
    margin: 10px;
    border: none;
    border-radius: 5px;
    background-color: #2a7c6f;
    color: white;
    font-size: 1em;
}
button:hover , .btn:hover{
    background-color: rgba(42, 124, 111,0.4);;
}
.container{
    display: flex;
    justify-content: space-evenly;
    background-color: #2a7c6f;
    color: white;
      margin: 1.5em;
      max-width: fit-content;
    
}
.container .image{
    width: 30vw;
    margin-left: 2em;
    text-align: center;
    
}
.mission img{
  
    margin: 20px;
    
}

p{
    margin: 10px;
}
 .button{
    border: 2px solid white;
border-radius: 10px;
    cursor: pointer;
 
 
}

button a{
    text-decoration: none;
    color:white;
    text-transform: uppercase;
}
.button:hover{
    background-color: white;
    color: #2a7c6f;
}
.mission h1{
    margin-top: 50px;
    font-size: 30px;
    color: white;
}
 h2{
    font-size: 25px;
    margin: 10px;
}
.classify{
    color:#2a7c6f;
    text-align: center;
  
  
}

.about-us:nth-child(2){
    margin-top: 200px;
}
.about-us h2{
text-align: center;
    
}
.events, .services{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-content: space-evenly;
    margin-bottom: 20px;
}

.event:hover{
    background-color: rgba(42, 124, 111,0.4);

}
 .main, h1{
text-align: center;
color: #2a7c6f;
}
.main{
    font-size: 10px;
}
.card-text, .card-title{
    color:#2a7c6f;
}
.card-title{
    text-transform: uppercase;
}
.card-img-top{
    height:40vh;
    width:30vw;
}
/**
caurosel
**/
.slides-container{
    display: flex;
    width: 100%;
    overflow: hidden;
}
.slide{
    min-width: 100%;
    transition: transform 0.5sec ease-in-out;
}
.slide img{
   
    object-fit: cover;
}

.carousel-caption{
   font-weight: 900;
    text-align: center;
    background-color: rgba(42, 124, 111,0.4);
    margin-right: 20%
}
.nav-links.show {
    display: flex; 
    flex-direction: column; 
  }
  .footer {
    display: flex;
  flex-direction: column;
  width: 100%;
  margin: auto;
  align-content: center;
  align-items: center;
  justify-content: space-evenly;
  background-color: #2a7c6f;
  padding: 20px;
color: white;
 
  }
/**  .socials{
    display: block;
    text-align: center;
  }
  **/
 
  .rows{
    display:flex;
    justify-content: space-evenly;
    margin-bottom: 20px;
  }
  .testimonial{

    color:#2a7c6f
  }
  #contact{
    color: #2a7c6f;
  }
  form{
    color:#2a7c6f;
  }
  form:hover{
   border: 2px solid #2a7c6f;
    padding:20px;
  }
  textarea, input{
   border:none;
   border-bottom: #2a7c6f 1px solid;
   padding:10px;
  }
  input:hover, textarea:hover{
    border:#2a7c6f solid 1px
  }
  .socials{
    display: inline-block;
    text-align: center;
    justify-content: space-evenly;
    gap:20px;
    margin-top: 20px;
  }
  i{
    color: white;
  }
@media (max-width:800px){
    html{
margin: 10px;
font-size: 10px;
    }
    .menu-icon.show {
        display: block; /* Show the hamburger icon on small screens */
      }
      nav{
        margin-right:20px;
      }
    .container{
        display:block;
        font-size: 10px; 
        margin: 10px;
    }
    img{
  
        width: 80vw;
        margin: auto;
        
    }
    .about-us:nth-child(2){
        margin-top: 10px;
    }
    
     .rows{
        display: block;
      
     }
     #contact{
        margin: auto;
        text-align: center;
     }
     
.logo{
    display:none;
}

     .logo-foot{
        height:30px;
        width:40px;
     }
   /** .hide ul{
        display: flex;
        flex-direction: column;
        justify-content: left;
    }
    **/
    .nav-links{
        display: none;
    }
    .nav-links.show {
        display: flex; /* Show the links when the hamburger icon is clicked */
        flex-direction: column; /* Stack links vertically */
      }
    .menu-icon{
        display: block;
        color: #2a7c6f;
        font-size: 20px;
        justify-content: right;
        cursor: pointer;
    }

    
   
    h1{
        font-size: 20px;
    }
    h2{
        font-size: 15px;
    }
    .events,.services{
        display: block;
       
    }
    .card-img-top{
        height: 20%;
        width:40%;
        justify-content: center;
        margin-top: 20px;
    }

